[build-system]
# Minimum requirements for the build system to execute
requires = [
    "Cython>=0.28",
    "packaging",
    # NumPy 1.25+ offers backwards compatibility that tracks with greater
    # than NEP29 (see: https://numpy.org/doc/stable/dev/depending_on_numpy.html#adding-a-dependency-on-numpy)
    # We pin our wheel installation to that and a maximum of numpy 2.0 since
    # this will likely involve several breaking changes
    "numpy>=1.25,<2.0; python_version>='3.9'",
    "setuptools",
    "wheel",
]

[project]
name = "MDAnalysis"
dynamic = ['version', 'readme']
license = {file = "LICENSE"}
description = "An object-oriented toolkit to analyze molecular dynamics trajectories."
authors = [
    {name = 'MDAnalysis Development Team', email = 'mdanalysis@numfocus.org'}
]
maintainers = [
    {name = 'MDAnalysis Core Developers', email = 'mdanalysis@numfocus.org'}
]
requires-python = ">=3.9"
dependencies = [
    'numpy>=1.22.3,<2.0',
    'biopython>=1.80',
    'networkx>=2.0',
    'GridDataFormats>=0.4.0',
    'mmtf-python>=1.0.0',
    'joblib>=0.12',
    'scipy>=1.5.0',
    'matplotlib>=1.5.1',
    'tqdm>=4.43.0',
    'threadpoolctl',
    'packaging',
    'fasteners',
]
keywords = [
    "python", "science", "chemistry", "biophysics", "molecular-dynamics",
    "computational-chemistry", "molecular-simulation", "analysis",
    "trajectory-analysis",
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: C',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.optional-dependencies]
extra_formats = [
    "netCDF4>=1.0",
    "h5py>=2.10",
    "chemfiles>=0.10",
    "parmed",
    "pyedr>=0.7.0",
    "pytng>=0.2.3",
    "gsd>3.0.0",
    "rdkit>=2020.03.1",
]
analysis = [
    "seaborn",
    "scikit-learn",
    "tidynamics>=1.0.0",
]
doc = [
    "sphinx",
    "sphinx-sitemap",
    "sphinx_rtd_theme",
    "msmb_theme==1.2.0",
    "sphinxcontrib-bibtex",
    "pybtex",
    "pybtex-docutils",
]


[project.urls]
Documentation = 'https://docs.mdanalysis.org/'
"User Guide" = 'https://userguide.mdanalysis.org/'
"Issue Tracker" = 'https://github.com/mdanalysis/mdanalysis/issues'
"User Group" = 'https://groups.google.com/g/mdnalysis-discussion/'
Discord = 'https://discord.com/channels/807348386012987462/'
Blog = 'https://www.mdanalysis.org/blog/'
Twitter = 'https://twitter.com/mdanalysis'
Source = 'https://github.com/mdanalysis/mdanalysis'

