[build-system]
# Minimum requirements for the build system to execute
requires = [
    "Cython>=0.28",
    "packaging",
    # lowest NumPy we can use for a given Python,
    # In part adapted from: https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
    # As per NEP29, we set the minimum version to 1.23.2 for Python <=3.11
    # and 1.26.0 (first to support) for Python 3.12
    "numpy==1.23.2; python_version<='3.11' and platform_python_implementation != 'PyPy'",
    "numpy==1.26.0; python_version=='3.12' and platform_python_implementation != 'PyPy'",
    # For unreleased versions of Python there is currently no known supported
    # NumPy version. In that case we just let it be a bare NumPy install
    "numpy<2.0; python_version>='3.13'",
    "setuptools",
    "wheel",
]

[project]
name = "MDAnalysis"
dynamic = ['version', 'readme']
license = {file = "LICENSE"}
description = "An object-oriented toolkit to analyze molecular dynamics trajectories."
authors = [
    {name = 'MDAnalysis Development Team', email = 'mdanalysis@numfocus.org'}
]
maintainers = [
    {name = 'MDAnalysis Core Developers', email = 'mdanalysis@numfocus.org'}
]
requires-python = ">=3.9"
dependencies = [
    'numpy>=1.23.2',
    'GridDataFormats>=0.4.0',
    'mmtf-python>=1.0.0',
    'joblib>=0.12',
    'scipy>=1.5.0',
    'matplotlib>=1.5.1',
    'tqdm>=4.43.0',
    'threadpoolctl',
    'packaging',
    'fasteners',
    'mda-xdrlib',
    'waterdynamics',
    'pathsimanalysis',
    'mdahole2',
]
keywords = [
    "python", "science", "chemistry", "biophysics", "molecular-dynamics",
    "computational-chemistry", "molecular-simulation", "analysis",
    "trajectory-analysis",
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: C',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.optional-dependencies]
extra_formats = [
    "netCDF4>=1.0",
    "h5py>=2.10",
    "chemfiles>=0.10",
    "parmed",
    "pyedr>=0.7.0",
    "pytng>=0.2.3",
    "gsd>3.0.0",
    "rdkit>=2020.03.1",
]
analysis = [
    "biopython>=1.80",
    "seaborn",
    "scikit-learn",
    "tidynamics>=1.0.0",
    'networkx>=2.0',
]
doc = [
    "sphinx",
    "sphinx-sitemap",
    "mdanalysis-sphinx-theme>=1.3.0",
    "sphinxcontrib-bibtex",
    "pybtex",
    "pybtex-docutils",
]


[project.urls]
Documentation = 'https://docs.mdanalysis.org/'
"User Guide" = 'https://userguide.mdanalysis.org/'
"Issue Tracker" = 'https://github.com/mdanalysis/mdanalysis/issues'
"User Group" = 'https://groups.google.com/g/mdnalysis-discussion/'
Discord = 'https://discord.com/channels/807348386012987462/'
Blog = 'https://www.mdanalysis.org/blog/'
Twitter = 'https://twitter.com/mdanalysis'
Source = 'https://github.com/mdanalysis/mdanalysis'
