[options]
#use_openmp=False
#debug_cflags=True
## The default values of use_cython and keep_cythonized
## depend on whether the current version is a release or not.
## Uncomment the following two lines to get the _release_ behavior.
#use_cython=False
#keep_cythonized=True
## any additional compiler flags for core C routines, excluding ENCORE
#extra_cflags = 
[wheel]
universal = 1

[build_sphinx]
all-files = 1
source-dir = doc/sphinx/source
build-dir = doc/html
warning-is-error = 1
