[build-system]
# Minimum requirements for the build system to execute
requires = [
    "packaging",
    "setuptools",
    "wheel",
]

[project]
name = "MDAnalysisTests"
version = "2.1.0-dev0"
license = {file = "LICENSE"}
authors = [
    {name = 'MDAnalysis Development Team', email = 'mdanalysis@numfocus.org'}
]
maintainers = [
    {name = 'MDAnalysis Core Developers', email = 'mdanalysis@numfocus.org'}
]
requires-python = ">=3.7"
dependencies = [
    'MDAnalysis==2.1.0-dev0',
    'pytest>=3.3.0',
    'hypothesis',
]
readme = "README"
keywords = [
    "python", "science", "chemistry", "biophysics", "molecular-dynamics",
    "computational-chemistry", "molecular-simulation", "analysis",
    "trajectory-analysis",
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows ',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: C',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Documentation = 'https://userguide.mdanalysis.org/stable/testing.html'
"CI Coverage" = 'https://codecov.io/gh/MDAnalysis/mdanalysis'
"Developer Group" = 'https://groups.google.com/g/mdnalysis-devel'
"Issue Tracker" = 'https://github.com/mdanalysis/mdanalysis/issues'
Source = 'https://github.com/mdanalysis/mdanalysis'
